--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#summary What exactly is the Ant Script Visualizer?
 #sidebar TableOfContents
 
 = Introduction =
