--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -1,5 +1,9 @@
 #summary How to build the Ant Script Visualizer
+#sidebar TableOfContents
 
 = How to build the Ant Script Visualizer =
 
-A build script is included (in the build directory).  For convenience, a {{{build.cmd}}} and {{{build.sh}}}
+A build script is included (in the build directory).  For convenience, a {{{build.cmd}}} and {{{build.sh}}}.  You will need to tweak these to work with your configuration for Windows.
+
+To build the project, simply run the "all" target, like so:
+{{{build all}}} for Windows, or {{{./build.sh all}}} for OS X and Linux.  
